# otrep-x-prime

./: .dockerignore  .dockerignore.bak  .env  .gitignore  Dockerfile  Makefile  README.md  RUNBOOK.md  SUMMARY.md  backtester.py  config.yaml  docker-compose.yml  env.template  mvt_trader.py  mvt_trader_live.py  pyproject.toml  requirements.txt  risk_manager.py
.devcontainer/: devcontainer.json
.github/workflows/: burn-in-test.yml  ci.yml  codespace_ci.yml
api/: __init__.py  alpaca_client.py  polygon_client.py
config/: config.py  engine.yaml
core/: __init__.py  config.py
cpp/: CMakeLists.txt
cpp/benchmark/: benchmark_main.cpp
cpp/include/otrep/: HybridStrategy.hpp  MarketGraph.hpp
cpp/python_bindings/: otrep_wrapper.cpp
cpp/src/: HybridStrategy.cpp  MarketGraph.cpp
cpp/test/: test_main.cpp
data/: aapl_mock.csv  sample_prices.csv
dockerfiles/: Dockerfile.engine  Dockerfile.signal
docs/: architecture_review.md  quant_conventions.md
docs/runbooks/: bootstrap.md
models/: __init__.py  tca_model.py
monitoring/: prometheus.yml
risk/: __init__.py  kill_switch.py  position_sizer.py
scripts/: ci.sh  otrep_cli.py  windows_bootstrap.ps1
services/: __init__.py  market_data_service.py
src/: app.py  app_stage02_backtest.py  app_stage10.py  core_logger.py  data_feed.py
src/analytics/: __init__.py  metrics.py
src/backtest/: __init__.py  engine.py  types.py
src/core/: alpaca_rest.py  app_stage02_backtest.py  app_stage06_live.py  app_stage07_async.py  async_stream_engine.py  backtester.py  config_manager.py  data_feed.py  doctor.py  error_handler.py  event_bus.py  execution_engine.py  jsonl_journal.py  live_execution_engine.py  logger.py  market_data.py  metrics_server.py  ml_optimizer.py  multimarket_manager.py  order_intent_journal.py  order_journal.py  order_manager.py  portfolio_manager.py  reconciler.py  retry.py  risk_engine.py  risk_manager.py  safety.py  strategy_registry.py  supervisor.py  trade_executor.py  trading_halt.py
src/dashboard/: app.py
src/risk/: __init__.py  manager.py
src/strategies/: mean_reversion.py  mean_reversion_strategy.py  momentum.py  momentum_strategy.py  signal_generator.py  stoichiometric.py  stoichiometric_strategy.py
src/utils/: __init__.py  logger.py
strategies/: __init__.py
strategy/: __init__.py  momentum.py
test/: test_backtest_engine.py  test_config.py  test_doctor_broker_state.py  test_market_data_service.py  test_metrics.py  test_mvt_trader_live_unified_config.py  test_order_intent_journal.py  test_order_manager.py  test_position_sizer.py  test_reconciler_halt.py  test_retry.py  test_risk_manager.py  test_safety.py  test_smoke_imports.py  test_trading_halt.py  test_ws_reconnect.py
tests/: test_basics.py
utils/: __init__.py  logger.py
